--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,11 @@
 rootProject.name = 'eggTimer'
+include ':react-native-alarm'
+project(':react-native-alarm').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-alarm/android')
 
 include ':app'
+
+include ':reactnativenotifications'
+project(':reactnativenotifications').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-notifications/android')
+
+include ':react-native-calendar-events'
+project(':react-native-calendar-events').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-calendar-events/android')
