--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "dependencies": {
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
+    "react-native-alarm": "^1.2.0",
+    "react-native-background-timer": "^2.0.1",
+    "react-native-calendar-events": "^1.5.0",
     "react-native-custom-radio-group": "^1.0.1",
+    "react-native-notifications": "^1.1.19",
+    "react-native-progress": "^3.4.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
