--- a/ios/eggTimer/Info.plist
+++ b/ios/eggTimer/Info.plist
@@ -57,6 +57,17 @@
 		<string>Vazir.ttf</string>
 		<string>Vazir-Bold.ttf</string>
 		<string>Vazir-Bold-FD.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Zocial.ttf</string>
 	</array>
 </dict>
 </plist>
