--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-custom-radio-group": "^1.0.1",
     "react-native-notifications": "^1.1.19",
     "react-native-progress": "^3.4.0",
+    "react-native-push-notification": "^3.0.2",
     "react-native-storage": "^0.2.2",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
