--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "react-native-background-timer": "^2.0.1",
     "react-native-calendar-events": "^1.5.0",
     "react-native-custom-radio-group": "^1.0.1",
-    "react-native-modalbox": "^1.4.2",
     "react-native-notifications": "^1.1.19",
     "react-native-popover-tooltip": "^1.1.4",
     "react-native-popup-dialog": "^0.11.46",
     "react-native-progress": "^3.4.0",
     "react-native-push-notification": "^3.0.2",
+    "react-native-responsive-dimensions": "^1.0.2",
     "react-native-storage": "^0.2.2",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
