egg images and icon and dialog design is great

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,6 +157,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-tapsell')
     compile project(':react-native-vector-icons')
     compile project(':react-native-push-notification')
     compile project(':react-native-calendar-events')
