--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "react-native-progress": "^3.4.0",
     "react-native-push-notification": "^3.0.2",
     "react-native-responsive-dimensions": "^1.0.2",
+    "react-native-sound": "^0.10.9",
     "react-native-storage": "^0.2.2",
-    "react-native-tapsell": "^2.17.0",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
