--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -104,7 +104,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.eggtimer"
+        applicationId "ir.parsiot.eggTimer"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
