--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,6 +157,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-tapsell')
+    compile project(':react-native-splash-screen')
     compile project(':react-native-sound')
     compile project(':react-native-vector-icons')
     compile project(':react-native-push-notification')
